src/lexer/tests/snapshots/lexer@fn.lt.snap
---
source: src/lexer.rs
assertion_line: 337
expression: "Lexer::new(&input).scan()"
input_file: src/tests/inputs/lexer/fn.input
---
Ok:
  - tt: Fn
    line: 1
    column: 1
  - tt:
      Ident: foo
    line: 1
    column: 4
  - tt: OpenParen
    line: 1
    column: 7
  - tt:
      Ident: a
    line: 1
    column: 8
  - tt: Comma
    line: 1
    column: 9
  - tt:
      Ident: b
    line: 1
    column: 11
  - tt: Comma
    line: 1
    column: 12
  - tt:
      Ident: c
    line: 1
    column: 14
  - tt: CloseParen
    line: 1
    column: 15
  - tt:
      Op: RetType
    line: 1
    column: 17
  - tt:
      VarType: Int32
    line: 1
    column: 20
  - tt: OpenBrace
    line: 1
    column: 24
  - tt:
      Ident: bar
    line: 2
    column: 5
  - tt: OpenParen
    line: 2
    column: 8
  - tt:
      Ident: a
    line: 2
    column: 9
  - tt: CloseParen
    line: 2
    column: 10
  - tt:
      Op: Add
    line: 2
    column: 12
  - tt:
      Num: "2"
    line: 2
    column: 14
  - tt:
      Semicolon: true
    line: 2
    column: 15
  - tt: CloseBrace
    line: 3
    column: 1
  - tt:
      Semicolon: true
    line: 3
    column: 2

