src/lexer/tests/snapshots/lexer@l_ops.lt.snap
---
source: src/lexer.rs
assertion_line: 337
expression: "Lexer::new(&input).scan()"
input_file: src/tests/inputs/lexer/l_ops.input
---
Ok:
  - tt:
      Ident: x
    line: 1
    column: 1
  - tt:
      Op: And
    line: 1
    column: 3
  - tt:
      Ident: y
    line: 1
    column: 6
  - tt:
      Semicolon: true
    line: 1
    column: 7
  - tt:
      Ident: x
    line: 2
    column: 1
  - tt:
      Op: Or
    line: 2
    column: 3
  - tt:
      Ident: y
    line: 2
    column: 6
  - tt:
      Semicolon: true
    line: 2
    column: 7
  - tt:
      Ident: x
    line: 3
    column: 1
  - tt:
      Op: Eq
    line: 3
    column: 3
  - tt:
      Ident: y
    line: 3
    column: 6
  - tt:
      Semicolon: true
    line: 3
    column: 7

