src/lexer/tests/snapshots/lexer@multi_line_comment.lt.snap
---
source: src/lexer.rs
assertion_line: 337
expression: "Lexer::new(&input).scan()"
input_file: src/tests/inputs/lexer/multi_line_comment.input
---
Ok:
  - tt: Let
    line: 1
    column: 1
  - tt:
      Ident: foo
    line: 1
    column: 5
  - tt:
      Op: Assign
    line: 1
    column: 9
  - tt:
      Num: "14"
    line: 1
    column: 11
  - tt:
      Semicolon: true
    line: 1
    column: 13
  - tt:
      Ident: foo
    line: 4
    column: 1
  - tt:
      Semicolon: true
    line: 4
    column: 4

