src/lexer/tests/snapshots/logical_ops-3.snap
---
source: src/lexer/mod.rs
assertion_line: 464
expression: "(input, Lexer::new(input).scan())"
---
- x == y
- Ok:
    - tt:
        Ident: x
      line: 1
      column: 1
    - tt:
        Op: Eq
      line: 1
      column: 3
    - tt:
        Ident: y
      line: 1
      column: 6
    - tt:
        Semicolon: true
      line: 1
      column: 7

