src/lexer/tests/snapshots/multi_line_comment.snap
---
source: src/lexer/mod.rs
assertion_line: 501
expression: "(input, Lexer::new(input).scan())"
---
- "let foo = 14\n// line1\n// line2\nfoo\n"
- Ok:
    - tt: Let
      line: 1
      column: 1
    - tt:
        Ident: foo
      line: 1
      column: 5
    - tt:
        Op: Assign
      line: 1
      column: 9
    - tt:
        Num: "14"
      line: 1
      column: 11
    - tt:
        Semicolon: true
      line: 1
      column: 13
    - tt:
        Ident: foo
      line: 4
      column: 1
    - tt:
        Semicolon: true
      line: 4
      column: 4

